# dprint-plugin-sexpr

./: Cargo.toml  README.md  dprint.json
src/: config.rs  plugin.rs
