[package]
name = "dprint-plugin-sexpr"
version = "0.1.0"
authors = ["RubixDev"]
edition = "2021"
homepage = "https://github.com/RubixDev/dprint-plugin-sexpr"
license = "GPL-3.0-only"
repository = "https://github.com/RubixDev/dprint-plugin-sexpr"
description = "S-expression support for dprint"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
anyhow = "1.0.71"
dprint-core = { version = "0.61.0", features = ["wasm"] }
rsexpr = { version = "0.2.2", features = ["comments"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
